--- a/projects/projects.json
+++ b/projects/projects.json
@@ -1,14 +1,5 @@
 [
-  {
-    "name": "E-commerece Website",
-    "desc": "It is a fully java based web application using JSP, Servlet and Html. In this I made signup,login,bill generator etc .. for more details please visit my github account.",
-    "image": "e-commerece",
-    "category": "Web Application",
-    "links": {
-      "view": "#",
-      "code": "https://github.com/PurushotamSharma/E-Commerece-Website"
-    }
-  },
+
   {
     "name": "Like a ChatGpt app ",
     "desc": "In this i use the API of the chatgpt",
@@ -18,6 +9,20 @@
       "view": "#",
       "code": "https://github.com/PurushotamSharma/chat_gpt"
     }
-  }
+  },
   
+  {
+    "name": "E-commerce Website",
+    "desc": "It is a fully Java-based web application using JSP, Servlet, and HTML. In this project, I implemented features like signup, login, bill generator, etc. For more details, please visit my GitHub account.",
+    "image": "ecommerce",
+    "category": "Web Application",
+    "links": {
+        "view": "https://example.com", 
+        "code": "https://github.com/PurushotamSharma/E-Commerce-Website"
+    }
+}
+
+
+  
+
 ]
